WIP: homepage icon position fixed; z-index; right

--- a/assets/css/comments.css
+++ b/assets/css/comments.css
@@ -25,7 +25,7 @@ audio {display: none;}
 .h1_class {color: white;}
 label {color: #BF0404;}
 
-.homepageTab {text-align: center; color: yellow; font-size: 40px; display: block;}
+.homepageTab {width: 100px; position:fixed;z-index: 1; right:0;bottom:0;}
 
 
 /*moved data up above
